--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,53 @@
   padding: 0;
 }
 
+.train {
+  position: fixed;
+  width: 150px;
+  height: 120px;
+  top: calc(40% - 60px);
+  left: calc(50% - 75px);
+  visibility: hidden;
+}
+
+.wagon {
+  position: fixed;
+  width: 150px;
+  height: 106px;
+  bottom: 53px;
+  cursor: pointer;
+  border: solid 0 #fff;
+  border-radius: 10px;
+}
+
+.wagon1 {
+  left: calc(10% - 75px);
+}
+
+.wagon2 {
+  left: calc(30% - 75px);
+}
+
+.wagon3 {
+  left: calc(50% - 75px);
+}
+
+.wagon4 {
+  left: calc(70% - 75px);
+}
+
+.wagon5 {
+  left: calc(90% - 75px);
+}
+
+.active {
+  background-color: rgba(0,0,0,0.2);
+}
+
+.freeze {
+  cursor: default;
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
 }
