--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+body {
+  background-color: #8CBED6;
+}
+
 .banner {
   position: fixed;
   top: 0;
@@ -36,6 +40,13 @@
 
 .banner ol {
   padding-left: 30px;
+}
+
+.help {
+  text-align: center;
+  font-family: arial, sans-serif;
+  color: white;
+  padding: 20px 30% 0;
 }
 
 .train {
