--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -51,15 +51,18 @@ body {
 
 .train {
   position: fixed;
-  width: 150px;
-  height: 120px;
   top: calc(40% - 60px);
   left: calc(50% - 75px);
-  background-size: 100%; 
 }
 
 .train.clickable {
   cursor: pointer;
+}
+
+.tr {
+  width: 150px;
+  height: 120px;
+  background-size: 100%; 
 }
 
 .tr1 {
@@ -84,13 +87,16 @@ body {
 
 .wagon {
   position: fixed;
-  width: 150px;
-  height: 106px;
   bottom: 53px;
   cursor: pointer;
   border: solid 0 #fff;
   border-radius: 10px;
   visibility: hidden;
+}
+
+.wg {
+  width: 150px;
+  height: 106px;
 }
 
 .wagon.visible {
@@ -133,7 +139,44 @@ button {
   display: block;
   padding: 10px;
   cursor: pointer;
-  margin: 2% auto 0;
+  margin: 1% auto 0;
+}
+
+.final {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #8CBED6;
+  width: 100%;
+  height: 100%;
+}
+
+/*.final button {
+  margin-bottom: -20px;
+}*/
+
+.final > div {
+  white-space: nowrap;
+}
+
+.final span {
+  display: inline-block;
+  background-repeat: no-repeat;
+}
+
+.f_train {
+  padding-bottom: 4px;
+}
+
+.f_wagon {
+  background-size: 100%; 
+  background-image: url('../images/vag.png');
+  margin-left: -15px;
+}
+
+.f_wagon + .f_wagon {
+  margin-left: -18px;
 }
 
 /* Responsive: Portrait tablets and up */
